--- a/index.html
+++ b/index.html
@@ -64,46 +64,46 @@
         <div class="box1 box">
             <div class="img-content">
                 <h2>Deals In PCs</h2>
-            <div class="box-img" style="background-image: url('pc.jpg')"></div>
+            <div class="box-img" style="background-image: url('Images/pc.jpg')"></div>
             <p>See more</p>
             </div>
         </div>
         <div class="box2 box"><div class="img-content">
             <h2>Office Furniture</h2>
-        <div class="box-img" style="background-image: url('office.jpg')"></div>
+        <div class="box-img" style="background-image: url('Images/office.jpg')"></div>
         <p>See more</p>
         </div></div>
         <div class="box3 box"><div class="img-content">
             <h2>SmartPhone</h2>
-        <div class="box-img" style="background-image: url('box4_image.jpg')"></div>
+        <div class="box-img" style="background-image: url('Images/box4_image.jpg')"></div>
         <p>See more</p>
         </div></div>
         <div class="box4 box"><div class="img-content">
             <h2>Beauty Products</h2>
-        <div class="box-img" style="background-image: url('box5_image.jpg')"></div>
+        <div class="box-img" style="background-image: url('Images/box5_image.jpg')"></div>
         <p>See more</p>
         </div></div>
         
         <div class="box5 box">
             <div class="img-content">
                 <h2>Health & Personal Growth</h2>
-            <div class="box-img" style="background-image: url('box2_image.jpg')"></div>
+            <div class="box-img" style="background-image: url('Images/box2_image.jpg')"></div>
             <p>See more</p>
             </div>
         </div>
         <div class="box6 box"><div class="img-content">
             <h2>Furniture</h2>
-        <div class="box-img" style="background-image: url('box3_image.jpg')"></div>
+        <div class="box-img" style="background-image: url('Images/box3_image.jpg')"></div>
         <p>See more</p>
         </div></div>
         <div class="box7 box"><div class="img-content">
             <h2>Toys For Children</h2>
-        <div class="box-img" style="background-image: url('box7_image.jpg')"></div>
+        <div class="box-img" style="background-image: url('Images/box7_image.jpg')"></div>
         <p>See more</p>
         </div></div>
         <div class="box8 box"><div class="img-content">
             <h2>SmartWatch</h2>
-        <div class="box-img" style="background-image: url('watch.jpg')"></div>
+        <div class="box-img" style="background-image: url('Images/watch.jpg')"></div>
         <p>See more</p>
         </div></div>
     </div>
